# LambdaReplicaCLI

./: .gitignore  LICENSE  README.md  pyproject.toml
lambdareplica/: __init__.py
lambdareplica/cli/: config_cli.py  object_storage_cli.py  replication_cli.py
lambdareplica/functions/aws/main/: handler.py  requirements.txt
lambdareplica/functions/aws/worker/: handler.py
lambdareplica/functions/azure/main/: function_app.py  host.json
lambdareplica/functions/azure/worker/: function_app.py  requirements.txt
lambdareplica/functions/gcp/main/: main.py  requirements.txt
lambdareplica/functions/gcp/worker/: main.py
lambdareplica/integration/: __init__.py  aws_client.py  azure_client.py  gcp_client.py
lambdareplica/setup/: setup_credentials.py  setup_resources.py
